sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Type__mdt/AI_Step_Type__mdt.object-meta.xml
<CustomObject>
    <description>Registry of available AI workflow step types. Add a record here + deploy an AIStepHandler implementation to introduce a new step type without changing core code.</description>
    <label>AI Step Type</label>
    <pluralLabel>AI Step Types</pluralLabel>
</CustomObject>