sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Type__mdt/fields/Handler_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class_Name__c</fullName>
    <label>Handler Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>