sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Type__mdt/fields/Has_Input__c.field-meta.xml
<CustomField>
    <fullName>Has_Input__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Input Port</label>
    <type>Checkbox</type>
</CustomField>