sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Type__mdt/fields/Has_Output__c.field-meta.xml
<CustomField>
    <fullName>Has_Output__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Output Port</label>
    <type>Checkbox</type>
</CustomField>