sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Type__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon (emoji or SLDS icon name)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>